# narwhalyzer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: narwhalyzer-compile.in  narwhalyzerConfig.cmake.in
docs/: DESIGN.md
examples/: macro_example.c  nested_example.c  simple_example.c  unstructured_example.c
include/: narwhalyzer.h  narwhalyzer_macros.h
src/: narwhalyzer.c  narwhalyzer_plugin.cc  narwhalyzer_pragma_plugin.cc
